--- a/AnimalShelter-SPA/src/app/animals/animal-edit/animal-edit.component.html
+++ b/AnimalShelter-SPA/src/app/animals/animal-edit/animal-edit.component.html
@@ -5,7 +5,7 @@
       <h1>{{animal.name}}'s Profile</h1>
     </div>
     <div class="col-sm-8">
-      <div *ngIf="editForm.dirty || changes" class="alert alert-info alert-warning">
+      <div *ngIf="isDifferent()" class="alert alert-info alert-warning">
         <strong>Information:</strong> You have made changes. Any unsaved changes will be lost!
       </div>
     </div>
@@ -14,83 +14,103 @@
     <div class="col-sm-4">
       <div class="card">
         <img class="card-img-top img-thumbnail" src="{{animal.photoUrl || '../../../assets/user.png'}}" alt="{{animal.name}}">
-        <div class="card-footer">
-          <button [disabled]="!editForm.dirty && !changes" form="editForm" class="btn btn-success btn-block">Save Changes</button>
-        </div>
       </div>
     </div>
 
     <div class="col-sm-8">
-      <div class="tab-panel">
-        <tabset class="member-tabset">
-          <tab heading="Edit Profile">
-            <form #editForm="ngForm" id="editForm" (ngSubmit)="updateAnimal()">
-              <div class="row mt-2">
-                <div class="col-sm-8">
-                  <h5 class="mt-1">Name</h5>
-                    <textarea name="name" rows="1" class="form-control mb-3" [(ngModel)]="animal.name"></textarea>
-                  <h5>Description</h5>
-                  <textarea name="description" rows="5" class="form-control" 
-                    [(ngModel)]="animal.description"></textarea>
-                  <div class="row">
-                    <div class="col">
-                      <h6 class="mt-2">Pet Type</h6>
-                      <select class="form-control" id="petType" name="species" rows="1" [(ngModel)]="animal.species">
-                        <option value="dog">Dog</option>
-                        <option value="cat">Cat</option>
-                        <option value="other">Other</option>
-                      </select>
+        <div class="tab-panel">
+          <tabset class="member-tabset">
+            <tab heading="Edit Profile">
+              <form [formGroup]="animalUpdateForm" (ngSubmit)="updateAnimal()">
+                <div class="row mt-2">
+                  <div class="col-sm-8">
+                    <div class="form-group">
+                      <input type="text"
+                      [ngClass]="{'is-invalid': animalUpdateForm.get('name').errors && animalUpdateForm.get('name').touched}"
+                      class="form-control" formControlName="name" placeholder="Name">
+                      <div class="invalid-feedback">A name is required</div>
                     </div>
-                    <div class="col">
-                      <h6 class="mt-2">Breed</h6>
-                      <textarea name="breed" rows="1" class="form-control" [(ngModel)]="animal.breed"></textarea>
+                    <div class="form-group">
+                      <textarea rows="7"
+                      class="form-control" formControlName="description" placeholder="Description"></textarea>
+                    </div>
+                    <div class="row">
+                      <div class="col">
+                        <div class="form-group">
+                          <select
+                            class="form-control" formControlName="species" placeholder="Pet Type">
+                            <option value="dog">Dog</option>
+                            <option value="cat">Cat</option>
+                            <option value="other">Other</option>
+                          </select>
+                        </div>
+                      </div>
+                      <div class="col">
+                        <div class="form-group">
+                          <input type="text"
+                          class="form-control" formControlName="breed" placeholder="Breed">
+                        </div>
+                      </div>
                     </div>
                   </div>
+                  <div class="col-sm-4">
+                    <div class="form-group">
+                      <label class="radio-inline">
+                        <input class="mr-3" type="radio" value="male" formControlName="gender">Male
+                      </label>
+                      <label class="radio-inline ml-3">
+                        <input class="mr-3" type="radio" value="female" formControlName="gender">Female
+                      </label>
+                    </div>
+                    <h6 class="mt-2">Age</h6>
+                      <div class="form-group">
+                        <input type="text"
+                        class="form-control" formControlName="ageYears" placeholder="Years">
+                      </div>
+                      <div class="form-group">
+                        <input type="text"
+                        class="form-control" formControlName="ageMonths" placeholder="Months">
+                      </div>
+                      <h6>Adoption Fee</h6>
+                      <div class="form-group">
+                        <input type="text"
+                        class="form-control" formControlName="adoptionFee" placeholder="Adoption Fee">
+                      </div>
+                    <h6 class="mt-2">Adopt By</h6>
+                      <input type="text" bsDatepicker [bsConfig]="bsConfig" name="adoptBy" rows="1" class="form-control" formControlName="adoptBy">
+                  </div>
                 </div>
-                <div class="col-sm-4">
-                  <h6 class="mt-2">Gender</h6>
-                    <select name="gender" rows="1" class="form-control" [(ngModel)]="animal.gender">
-                      <option>Female</option>
-                      <option>Male</option>
-                    </select>
-                  <h6 class="mt-2">Age</h6>
-                    <p>Years:</p>
-                    <textarea name="ageYears" rows="1" class="form-control" [(ngModel)]="animal.ageYears"></textarea>
-                    <p>Months:</p>
-                    <textarea name="ageMonths" rows="1" class="form-control" [(ngModel)]="animal.ageMonths"></textarea>
-                  <h6 class="mt-2">Adoption Fee</h6>
-                    <textarea name="adoptionFee" rows="1" class="form-control" [(ngModel)]="animal.adoptionFee"></textarea>
-                  <h6 class="mt-2">Adopt By</h6>
-                    <input type="text" bsDatepicker [bsConfig]="bsConfig" name="adoptBy" rows="1" class="form-control" [(ngModel)]="animal.adoptBy">
+                <div class="form-group text-center">
+                  <button class="btn btn-success" type="submit">Update</button>
+                  <button class="btn btn-default" (click)="reset()" type="button" >Reset</button>
+                </div>
+              </form>
+            </tab>
+            <tab heading="Edit Tags">
+              <h4 class="mt-3">Likes</h4>
+              <div class="row">
+                <div class="col-md-4" *ngFor="let like of likes">
+                  <input type="checkbox" [(ngModel)]="this.animalLikes[like]" (click)="addOrRemoveTag(like,'like')"> {{like}}
                 </div>
               </div>
-            </form>
-          </tab>
-          <tab heading="Edit Tags">
-            <h4 class="mt-3">Likes</h4>
-            <div class="row">
-              <div class="col-md-4" *ngFor="let like of likes">
-                <input type="checkbox" [(ngModel)]="this.animalLikes[like]" (click)="addOrRemoveTag(like,'like')"> {{like}}
+              <h4 class="mt-3">Qualities</h4>
+              <div class="row">
+                <div class="col-md-4" *ngFor="let quality of qualities">
+                  <input type="checkbox" [(ngModel)]="this.animalQualities[quality]" (click)="addOrRemoveTag(quality,'quality')"> {{quality}}
+                </div>
               </div>
-            </div>
-            <h4 class="mt-3">Qualities</h4>
-            <div class="row">
-              <div class="col-md-4" *ngFor="let quality of qualities">
-                <input type="checkbox" [(ngModel)]="this.animalQualities[quality]" (click)="addOrRemoveTag(quality,'quality')"> {{quality}}
+              <h4 class="mt-3">Good With</h4>
+              <div class="row">
+                <div class="col-md-4" *ngFor="let goodWith of goodWith">
+                  <input type="checkbox" [(ngModel)]="this.animalGoodWith[goodWith]" (click)="addOrRemoveTag(goodWith,'goodWith')"> {{goodWith}}
+                </div>
               </div>
-            </div>
-            <h4 class="mt-3">Good With</h4>
-            <div class="row">
-              <div class="col-md-4" *ngFor="let goodWith of goodWith">
-                <input type="checkbox" [(ngModel)]="this.animalGoodWith[goodWith]" (click)="addOrRemoveTag(goodWith,'goodWith')"> {{goodWith}}
-              </div>
-            </div>
-          </tab>
-          <tab heading="Edit Photos">
-            <app-photo-editor [animal]="animal"></app-photo-editor>
-          </tab>
-        </tabset>
-      </div>
+            </tab>
+            <tab heading="Edit Photos">
+              <app-photo-editor [animal]="animal"></app-photo-editor>
+            </tab>
+          </tabset>
+        </div>
     </div>
   </div>
 </div>
