--- a/AnimalShelter-SPA/src/app/home/home.component.css
+++ b/AnimalShelter-SPA/src/app/home/home.component.css
@@ -1,12 +1,12 @@
-.fullscreen {
+/* .fullscreen {
     position: fixed;
     top: 0;
     left: 0;
     bottom: 0;
     right: 0;
     z-index: -1;
-  }
+  } */
 
-h1 {
+/* h1 {
     margin-top: 10%;
-}
+} */
