--- a/AnimalShelter-SPA/src/app/home/home.component.html
+++ b/AnimalShelter-SPA/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<body class="fullscreen" [ngStyle]="{'background': ' url(' + '../../assets/background.png' + ') no-repeat 0 0'}">
+<body class="fullscreen">
   <div class="container mt-5">
     <h1 class="text-center">Welcome</h1>
       <div style="text-align: left">
