--- a/AnimalShelter-SPA/src/app/nav/nav.component.html
+++ b/AnimalShelter-SPA/src/app/nav/nav.component.html
@@ -6,10 +6,13 @@
       <div class="col">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item" routerLinkActive="active">
+            <a class="nav-link" [routerLink]="['/about']" routerLinkActive="router-link-active" >About</a>
+          </li>
+          <li class="nav-item" routerLinkActive="active">
             <a class="nav-link" [routerLink]="['/animals']">Browse Pets</a>
           </li>
           <li class="nav-item" routerLinkActive="active">
-            <a class="nav-link" [routerLink]="['/about']" routerLinkActive="router-link-active" >About</a>
+            <a class="nav-link" [routerLink]="['/rehome']" routerLinkActive="router-link-active" >Rehome</a>
           </li>
         </ul>
       </div>
