--- a/AnimalShelter-SPA/src/app/nav/nav.component.css
+++ b/AnimalShelter-SPA/src/app/nav/nav.component.css
@@ -22,3 +22,34 @@ img {
     border: 1px solid white;
     display: inline;
 }
+
+.main-navigation__menu-btn {
+    width: 3rem;
+    height: 3rem;
+    background: transparent;
+    border: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    margin-right: 2rem;
+    cursor: pointer;
+  }
+  
+  .main-navigation__menu-btn span {
+    display: block;
+    width: 2rem;
+    height: 2.5px;
+    background: white;
+  }
+
+  .side-drawer {
+    position: fixed;
+    left: 0;
+    top: 0;
+    z-index: 100;
+    height: 100vh;
+    width: 70%;
+    background: rgb(34, 33, 33);
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
+  }
+  
