--- a/AnimalShelter-SPA/src/app/nav/nav.component.html
+++ b/AnimalShelter-SPA/src/app/nav/nav.component.html
@@ -46,11 +46,11 @@
         </div>
       
         <form *ngIf="loginMode" #loginForm ="ngForm" class="form-inline my-2 my-lg-0" (ngSubmit)= "login()">
-          <button type="button" class="mr-2" (click)="loginToggle()"><i class="fa fa-arrow-left"> Back</i></button>
           <input class="form-control mr-sm-2" type="text" name="username" 
             placeholder="Username" required [(ngModel)]= "model.username">
           <input class="form-control mr-sm-2" type="password" name="password" 
             placeholder="Password" required [(ngModel)]= "model.password">
+          <button type="button" class="mr-2" (click)="loginToggle()" style="background: rgb(189, 38, 38);color: rgb(105, 10, 10);"><i class="fa fa-times"></i></button>
           <button [disabled] = "!loginForm.valid" class="btn btn-success my-2 my-sm-0" type="submit">Login</button>
         </form>
         </div>
