Fixed mobile dropdown

--- a/AnimalShelter-SPA/src/app/nav/nav.component.html
+++ b/AnimalShelter-SPA/src/app/nav/nav.component.html
@@ -70,7 +70,7 @@
           </div>
           
       
-          <div class="dropdown-menu mt-3" *dropdownMenu>
+          <div class="dropdown-menu dropdown-menu-right" *dropdownMenu>
             <a class="dropdown-item" [routerLink]="['/user-edit']" routerLinkActive="router-link-active" ><i class="fa fa-user mr-1"></i>Edit Profile</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" [routerLink]="['/your-animals']"><i class="fa fa-paw mr-1"></i>Your Pets</a>
